# python-learning

./: .gitignore  .python-version  Pipfile  README.md  main.py  output.md  pyproject.toml  translate.py
PyQt5-Learning/: .gitignore
PyQt5-Learning/basic/: first.py
PyQt5-Learning/controls/: CenterForm.py  QLabelBuddy.py  QLabelDemo.py  QLineEditDemo.py  QLineEditEchoMode.py  QLineEditValidator.py  QTextEditDemo.py  QuitApplication.py  ScreenGeometry.py
PyQt5-Learning/mainwin/: FirstMainWin.py  IconForm.py  ToolTip.py
PyQt5-Learning/qtdesinger/Container/: MainWindowContainer.py  MainWindowContainer.ui  RunMainWindowContainer.py
PyQt5-Learning/qtdesinger/GridLayout/: RunMainWindow.py  demo.py  demo.ui
autogen_demo/: __init__.py  dice.py
camera-face/: .gitignore  generate_images.py  main.py
data/: AbstractTypes.csv  AircraftTypes.csv  BuildingTypes.csv  CrateRules.csv  General.csv  InfantryTypes.csv  ObjectTypes.csv  TechnoTypes.csv  TerrainTypes.csv  VehicleTypes.csv
flask-tutorials/: .gitignore  README.md  setup.py
flask-tutorials/flaskr/: __init__.py  auth.py  blog.py  db.py
flask-tutorials/flaskr/templates/: base.html
flask-tutorials/tests/: conftest.py  test_auth.py  test_blog.py  test_db.py  test_factory.py
ml-learing/: .gitignore
ml-learing/examples/kaggle/: Iris_example.py  applied-machine-learning.ipynb
ml-learing/examples/tf/: clothing_classification.py
ml-learing/koggle_leran/: data_visualization.py  first.py  intermediate_ml.py  intro_pandas.py  titanic.py
ml-learing/scikit_learn/: test.py
ml-learing/tf_learn/: binary_classification_colab.py  estimator_test.py  intro_to_neural_nets.py  linear_regression_1.py  linear_regression_2.py  multi_class_classification_with_MNIST.py  representation_with_feature_cross.py  validation_and_test_sets.py
src/devteam/: crew.py  main.py
src/devteam/config/: agents.yaml  (+1 more)
src/market_research/: crew.py  main.py
src/mcp-server-rednote/: pyproject.toml
src/mcp-server-rednote/src/mcp_server_rednote/: __init__.py  __main__.py  rednote.py  server.py
(+2 files in other folders)
