[project]
name = "python-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "easyocr>=1.7.2",
    "fuzzywuzzy>=0.18.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
]

[tool.uv]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
